@@ -230,8 +230,10 @@ bool SusyNtTools::isSignalElectron(const Electron* ele, uint nVtx, bool isMC)
   if( (ele->topoEtcone30Corr - slope*nVtx)/ele->Pt() >= ELECTRON_TOPOCONE30_PT_CUT ) return false;
 
   // Impact parameter
-  if(fabs(ele->d0/ele->errD0) >= ELECTRON_D0SIG_CUT) return false;
-  if(fabs(ele->z0*sin(ele->Theta())) >= ELECTRON_Z0_SINTHETA_CUT) return false;
+  //if(fabs(ele->d0/ele->errD0) >= ELECTRON_D0SIG_CUT) return false;
+  //if(fabs(ele->z0*sin(ele->Theta())) >= ELECTRON_Z0_SINTHETA_CUT) return false;
+  if(fabs(ele->d0Sig()) >= ELECTRON_D0SIG_CUT) return false;
+  if(fabs(ele->z0SinTheta()) >= ELECTRON_Z0_SINTHETA_CUT) return false;
   return true;
 }
 /*--------------------------------------------------------------------------------*/
@@ -240,7 +242,6 @@ bool SusyNtTools::isSignalMuon(const Muon* mu, uint nVtx, bool isMC)
   // Sliding ptcone isolation cut, slope differs between data/mc
   float slope = isMC? MUON_PTCONE30_SLOPE_MC : MUON_PTCONE30_SLOPE_DATA;
   if( (mu->ptcone30 - slope*nVtx)/mu->Pt() >= MUON_PTCONE30_PT_CUT ) return false;
-  //if(mu->ptcone30/mu->Pt() >= MUON_PTCONE30_PT_CUT) return false;
 
   // Impact parameter
   if(fabs(mu->d0/mu->errD0) >= MUON_D0SIG_CUT) return false;
